# QRC-EEG

./: .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE_CHECKLIST.md  RESULTS.md  pyproject.toml  requirements-lock.txt
config/: README.md  eeg_frozen.yaml  effective_kernel_gate1_frozen.json  effective_kernel_gate1b_robustness.json  esn_distributed_memory_frozen.yaml  rotaA_gate3_frozen.json  rotaA_stage2_frozen.json
docs/: PROVENANCE.md  README.md  claims_registry.md  classical_distributed_memory_protocol.md  code_availability.md  crossed_inference_protocol.md  data_availability.md  eeg_gate_preregistration.md  eeg_preregistration.md  eeg_protocol.md  effective_kernel_check_protocol.md  effective_kernel_theory.md  evidence_map.md  figure_inventory.md  final_results_summary.md  gate1b_robustness_protocol.md  gate2_postgate_addendum.md  gate3_protocol.md  limitations.md  paper_blueprint.md  physical_resources.md  repository_structure.md  reproducibility.md  reviewer_risk_register.md  rotaA_plan.md  synthetic_stage2_protocol.md  table_inventory.md
figures/: README.md
paper/: tab_eeg_contrasts.tex  tab_eeg_endpoints.tex  tab_esn_matched.tex  tab_ictal_classification.tex  tab_ictal_classification_contrasts.tex  tab_long_horizon_contrasts.tex  tab_physical_resources.tex  tab_quadratic_capacity.tex
provenance/: eeg_checksums.txt
results/: ARTIFACT_INDEX.csv  README.md
scripts/: README.md  append_overnight_provenance.py  build_repository_release.py  capture_legacy_alphas.py  fetch_eeg.py  github_api.py  make_bugfix_diff_report.py  make_crossed_inference_figure.py  (+55 more)
(+178 files in other folders)
